--- a/_posts/2017-02-10-new-apt.markdown
+++ b/_posts/2017-02-10-new-apt.markdown
@@ -5,11 +5,13 @@ date:   2017-02-10 21:25:24 -0800
 categories: jekyll update
 comments: true
 images:
-  - serfing-ocean-beach.jpeg
-  - walking-at-beale.jpeg
+  - 2017-02-10_17-29-44_609.jpeg
+  - 2017-02-10_17-44-31_861.jpeg
+  - 2017-02-10_17-43-20_702.jpeg
+  - 2017-02-10_20-36-12_626.jpeg
 ---
 
-Прошла рабочая неделя, впереди выходные. И как-то знаете, с одной стороны много всего было, а с другой- очень быстро она пролетела. Знаете то чувство, когда ты приезжаешь в лагерь и первые два дня длятся целую вечность, а оставшееся время от смены пролетает в миг. Или первые дни отпуска? 
+Прошла рабочая неделя, впереди выходные. И как-то знаете, с одной стороны много всего было, а с другой- очень быстро она пролетела. Это то чувство, когда ты приезжаешь в лагерь и первые два дня длятся целую вечность, а оставшееся время от смены пролетает в миг. Или первые дни отпуска? 
 <!--separate-->
 Наверное это все связано с привычкой- первые пару дней все по-новому, ты делаешь над собой усилия потом, что все непривычно. А потом просто берешь и привыкаешь, и все идет “как по-маслу”. 
 “Как по-маслу” у меня,конечно, не идет, но что-то подобное наблюдается. Неделя правда быстро пролетела.
@@ -25,6 +27,8 @@ images:
 … больше ничего не могу вспомнить. Наверное, все же лучше записывать.
 
 В общем, я поехала. Расскажу вам потом, каким получится этот “Big day for you, guys”- как сказал риэлтор.
+
+PS: забегая вперед, вот вам несколько фото с того вечера, когда мы принимали квартиру
 
 
 
