--- a/_posts/2017-02-10-new-apt.markdown
+++ b/_posts/2017-02-10-new-apt.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Big day"
+title:  "\"Big day\""
 date:   2017-02-10 21:25:24 -0800
 categories: jekyll update
 comments: true
