--- a/_posts/2017-04-24-guests.markdown
+++ b/_posts/2017-04-24-guests.markdown
@@ -26,10 +26,16 @@ comments: true
 
 Пример 1 дня в городе:
 1. старт от **_Pier 39_**: гуляем по пирсу и выходим в лежбищу морских котиков, виду на Алькатрас и Golden Gate Bridge
-2. смотрим выступления уличных музыкантов и направляемся в сторону **Fisherman's Wharf**. Там гости пробуют Chowder - крабовый суб в булке и кормят чаек, которые тут ~~выросли~~ отъелись до нереальных размером
-3. заходим в **Rainforest cafe** - смотрим на джунгли, устроенные прямо в магазине, и заглядываем в витрину **Boudin**, где мастера хлебопекарного дела выпекают свои новые шедевры
-4. идет до **Chirardelli square**, где еще в 19 веке Доменико Жирарделли открыл свою шоколадную фабрику. Сейчас же здесь магазины и кафе. Также осталось несколько станков, которые делали шоколад, ну и, конечно, вы можете угоститься нереальнейшим десертом, состоящим из мороженого, шоколада, сливок, сиропов ... и все это в одном десерте
+2. смотрим выступления уличных музыкантов и направляемся в сторону **_Fisherman's Wharf_**. Там гости пробуют Chowder - крабовый суб в булке и кормят чаек, которые тут ~~выросли~~ отъелись до нереальных размером
+3. заходим в **_Rainforest cafe_** - смотрим на джунгли, устроенные прямо в магазине, и заглядываем в витрину **_Boudin_**, где мастера хлебопекарного дела выпекают свои новые шедевры
+4. идет до **_Chirardelli square_**, где еще в 19 веке Доменико Жирарделли открыл свою шоколадную фабрику. Сейчас же здесь магазины и кафе. Также осталось несколько станков, которые делали шоколад, ну и, конечно, вы можете угоститься нереальнейшим десертом, состоящим из мороженого, шоколада, сливок, сиропов ... и все это в одном десерте
 5. нагулявшись вдоволь у вас есть два варианта:
-  * Идти пешком до **Golden Gate bridge**. Прогулка будет очень приятной: картинка будет меняться, вы пройдете и по парку, вдоль яхт и пляжа. И все это с видом на мост. Прогулка займет примерно 1 час 20 минут
+  * Идти пешком до **_Golden Gate bridge_**. Прогулка будет очень приятной: картинка будет меняться, вы пройдете и по парку, вдоль яхт и пляжа. И все это с видом на мост. Прогулка займет примерно 1 час 20 минут
   * Ехать на 28 автобусе. Из-за недостатка времени (начали прогулку мы только в 2 часа дня) мы выбрали именно этот вариант. Остановка автобуса находится совсем рядом с вышеупомянутой Chirardelli sq.
-6.
+6. как только все оказываются у моста, обычно начинается фотосессия, что неудивительно, ведь многие приезжают в Сан Франциско, чтобы посмотреть мост (который очень потрясает, но не является единственным интересным местом в городе)
+7. дальше у вас снова два варианта:
+  * одни из наших друзей еще по дороге к мосту взяли на прокат велосипеды и, соответственно, поехали через мост и в **__Sausalito__** - очень уютный городок с променадом и видом на  San Francisco
+  * брать uber и ехать дальше.  в один из дней мы поехали с ребятами на **__Haight street__**, соседствующую с **__Golden Gate park__**. Улица известна тем, что на ней любили и любят проводить время хиппи. Магазины тут соответствующий, а дух (запах) свободы чувствуется на каждом углу
+  * мы же с девочками дошли пешком до **__Baker beach__**, о чем ни разу не пожалели. Ведь я уже рассказывала вам о том, какой вид с него открывается
+8. оттуда мы уже взяли uber и переместились к **__Union aquare__**-  центру современной жизни города. Здесь же рядом  **__Financial district__** магазины и рестораны. 
+9. так получилось, что еще в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага  **__Macy's__** есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район
