--- a/_posts/2017-04-24-guests.markdown
+++ b/_posts/2017-04-24-guests.markdown
@@ -26,16 +26,40 @@ comments: true
 
 Пример 1 дня в городе:
 1. старт от **_Pier 39_**: гуляем по пирсу и выходим в лежбищу морских котиков, виду на Алькатрас и Golden Gate Bridge
+
 2. смотрим выступления уличных музыкантов и направляемся в сторону **_Fisherman's Wharf_**. Там гости пробуют Chowder - крабовый суб в булке и кормят чаек, которые тут ~~выросли~~ отъелись до нереальных размером
+
 3. заходим в **_Rainforest cafe_** - смотрим на джунгли, устроенные прямо в магазине, и заглядываем в витрину **_Boudin_**, где мастера хлебопекарного дела выпекают свои новые шедевры
+
 4. идет до **_Chirardelli square_**, где еще в 19 веке Доменико Жирарделли открыл свою шоколадную фабрику. Сейчас же здесь магазины и кафе. Также осталось несколько станков, которые делали шоколад, ну и, конечно, вы можете угоститься нереальнейшим десертом, состоящим из мороженого, шоколада, сливок, сиропов ... и все это в одном десерте
+
 5. нагулявшись вдоволь у вас есть два варианта:
   * Идти пешком до **_Golden Gate bridge_**. Прогулка будет очень приятной: картинка будет меняться, вы пройдете и по парку, вдоль яхт и пляжа. И все это с видом на мост. Прогулка займет примерно 1 час 20 минут
   * Ехать на 28 автобусе. Из-за недостатка времени (начали прогулку мы только в 2 часа дня) мы выбрали именно этот вариант. Остановка автобуса находится совсем рядом с вышеупомянутой Chirardelli sq.
+
 6. как только все оказываются у моста, обычно начинается фотосессия, что неудивительно, ведь многие приезжают в Сан Франциско, чтобы посмотреть мост (который очень потрясает, но не является единственным интересным местом в городе)
+
 7. дальше у вас снова два варианта:
-  * одни из наших друзей еще по дороге к мосту взяли на прокат велосипеды и, соответственно, поехали через мост и в **__Sausalito__** - очень уютный городок с променадом и видом на  San Francisco
-  * брать uber и ехать дальше.  в один из дней мы поехали с ребятами на **__Haight street__**, соседствующую с **__Golden Gate park__**. Улица известна тем, что на ней любили и любят проводить время хиппи. Магазины тут соответствующий, а дух (запах) свободы чувствуется на каждом углу
-  * мы же с девочками дошли пешком до **__Baker beach__**, о чем ни разу не пожалели. Ведь я уже рассказывала вам о том, какой вид с него открывается
-8. оттуда мы уже взяли uber и переместились к **__Union aquare__**-  центру современной жизни города. Здесь же рядом  **__Financial district__** магазины и рестораны. 
-9. так получилось, что еще в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага  **__Macy's__** есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район
+  * одни из наших друзей еще по дороге к мосту взяли на прокат велосипеды и, соответственно, поехали через мост и в **_Sausalito_** - очень уютный городок с променадом и видом на  San Francisco
+  * брать uber и ехать дальше.  в один из дней мы поехали с ребятами на **_Haight street_**, соседствующую с **_Golden Gate park_**. Улица известна тем, что на ней любили и любят проводить время хиппи. Магазины тут соответствующий, а дух (запах) свободы чувствуется на каждом углу
+  * мы же с девочками дошли пешком до **_Baker beach_**, о чем ни разу не пожалели. Ведь я уже рассказывала вам о том, какой вид с него открывается
+
+8. оттуда мы уже взяли uber и переместились к **_Union aquare_**-  центру современной жизни города. Здесь же рядом  **_Financial district_** магазины и рестораны. 
+
+9. так получилось, что еще в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага  **_Macy's_** есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район и " на крыше мира" вы не окажетесь. Но площадь рассмотреть все-же удастся
+
+10. погуляв среди небоскребов, я советую направиться в **_China Town_**. Напоминаю, что маршрут который я описывают стоит повторять только в экстремальных условиях: если вы хотите увидеть все за 2 дня
+
+11. итак, продолжаем... направляемся в **_Dragon's Gate_** и попадаем в самый центра China town-a. Имейте в виду, что после 6 вечера постепенно все магазины там закрываются, что может быть плюсом (меньше суматохи), но и минусом (дешевые сувениры вы не успеете купить)
+
+12. пункт 12 и самый главный - гуляем по Columbus avenue, Stockton стрит и приходим к нам в гости на ароматный чай и посиделки у камина!
+
+Конечно, за один день посмотреть, а самое главное- прочувствовать Сан Франциско у вас не получится. Но я постаралась описать вам реальный маршрут, который мы проделали. 
+
+Из невошедшего:
+1. Golden Gate Park -огромнейший парк (лес), где можно приятно провести время
+2. Ocean beach - пляж на окене 
+3. Twin Peaks - одна из самых высоких точек в городе
+4. Alcatraz - всемирно известная тюрьма
+5& Cable car - 
+
