--- a/_posts/2017-04-24-guests.markdown
+++ b/_posts/2017-04-24-guests.markdown
@@ -35,11 +35,11 @@ comments: true
   * Ехать на 28 автобусе. Из-за недостатка времени (начали прогулку мы только в 2 часа дня) мы выбрали именно этот вариант. Остановка автобуса находится совсем рядом с вышеупомянутой Chirardelli sq.
 7. как только все оказываются у моста, обычно начинается фотосессия, что неудивительно, ведь многие приезжают в Сан Франциско, чтобы посмотреть мост (который очень потрясает, но не является единственным интересным местом в городе)
 8. дальше у вас снова два варианта:
-  * одни из наших друзей еще по дороге к мосту взяли на прокат велосипеды и, соответственно, поехали через мост и в **__Sausalito__** - очень уютный городок с променадом и видом на  San Francisco
-  * брать uber и ехать дальше.  в один из дней мы поехали с ребятами на **__Haight street__**, соседствующую с **__Golden Gate park__**. Улица известна тем, что на ней любили и любят проводить время хиппи. Магазины тут соответствующий, а дух (запах) свободы чувствуется на каждом углу
-  * мы же с девочками дошли пешком до **__Baker beach__**, о чем ни разу не пожалели. Ведь я уже рассказывала вам о том, какой вид с него открывается
-9. оттуда мы уже взяли uber и переместились к **__Union aquare__**-  центру современной жизни города. Здесь же рядом  **__Financial district__**, магазины и рестораны. 
-10. так получилось, что еще в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага  **__Macy's__** есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район
+  * одни из наших друзей еще по дороге к мосту взяли на прокат велосипеды и, соответственно, поехали через мост и в **_Sausalito_** - очень уютный городок с променадом и видом на  San Francisco
+  * брать uber и ехать дальше.  в один из дней мы поехали с ребятами на **_Haight street_**, соседствующую с **_Golden Gate park_**. Улица известна тем, что на ней любили и любят проводить время хиппи. Магазины тут соответствующий, а дух (запах) свободы чувствуется на каждом углу
+  * мы же с девочками дошли пешком до **_Baker beach_**, о чем ни разу не пожалели. Ведь я уже рассказывала вам о том, какой вид с него открывается
+9. оттуда мы уже взяли uber и переместились к **_Union aquare_**-  центру современной жизни города. Здесь же рядом  **_Financial district_**, магазины и рестораны. 
+10. так получилось, что еще в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага  **_Macy's_** есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район
 11. через **_Dragon's Gate_** перемещаемся в настоящий Китайский город, где стараемся не сойти с ума от суматохи, которая там творится, насладиться видами красных фонариков, подвещенных через улицу, купить сувениры и направиться дальше
 12. если вы идете по нашему маршруту, то у вас уже должен был наступить вечер и вы должны были оказаться на углу Broadway и Columbus ave. Здесь я советую вам неспешно прогуляться и направиться ко мне в гости- на Stockton street. За чаем и посиделками у камина =)
 
