--- a/_posts/2017-04-24-guests.markdown
+++ b/_posts/2017-04-24-guests.markdown
@@ -26,7 +26,7 @@ comments: true
 
 Пример 1 дня в городе:
 1. старт от **_Pier 39_**: гуляем по пирсу и выходим в лежбищу морских котиков, виду на Алькатрас и Golden Gate Bridge
-2. смотрим выступления уличных музыкантов и направляемся в сторону **_Fisherman's Wharf_**. Там гости пробуют Chowder - крабовый суб в булке и кормят чаек, которые тут ~~выросли~~ отъелись до нереальных размером
+2. смотрим выступления уличных музыкантов и направляемся в сторону **_Fisherman's Wharf_**. Там в Crab Station гости пробуют Chowder - крабовый суб в булке и кормят чаек, которые тут ~~выросли~~ отъелись до нереальных размером
 3. играем в старинные механические игровые автоматы в **_Musee Mecanique_**
 4. заходим в **_Rainforest cafe_** - смотрим на джунгли, устроенные прямо в магазине, и заглядываем в витрину **_Boudin_**, где мастера хлебопекарного дела выпекают свои новые шедевры
 5. идет до **_Chirardelli square_**, где еще в 19 веке Доменико Жирарделли открыл свою шоколадную фабрику. Сейчас же здесь магазины и кафе. Также осталось несколько станков, которые делали шоколад, ну и, конечно, вы можете угоститься нереальнейшим десертом, состоящим из мороженого, шоколада, сливок, сиропов ... и все это в одном десерте
