--- a/_posts/2017-04-24-guests.markdown
+++ b/_posts/2017-04-24-guests.markdown
@@ -29,7 +29,7 @@ comments: true
 2. смотрим выступления уличных музыкантов и направляемся в сторону **_Fisherman's Wharf_**. Там в Crab Station гости пробуют Chowder - крабовый суб в булке и кормят чаек, которые тут ~~выросли~~ отъелись до нереальных размером
 3. играем в старинные механические игровые автоматы в **_Musee Mecanique_**
 4. заходим в **_Rainforest cafe_** - смотрим на джунгли, устроенные прямо в магазине, и заглядываем в витрину **_Boudin_**, где мастера хлебопекарного дела выпекают свои новые шедевры
-5. идет до **_Chirardelli square_**, где еще в 19 веке Доменико Жирарделли открыл свою шоколадную фабрику. Сейчас же здесь магазины и кафе. Также осталось несколько станков, которые делали шоколад, ну и, конечно, вы можете угоститься нереальнейшим десертом, состоящим из мороженого, шоколада, сливок, сиропов ... и все это в одном десерте
+5. идет до **_Ghirardelli square_**, где еще в 19 веке Доменико Жирарделли открыл свою шоколадную фабрику. Сейчас же здесь магазины и кафе. Также осталось несколько станков, которые делали шоколад, ну и, конечно, вы можете угоститься нереальнейшим десертом, состоящим из мороженого, шоколада, сливок, сиропов ... и все это в одном десерте
 6. нагулявшись вдоволь у вас есть два варианта:
   * Идти пешком до **_Golden Gate bridge_**. Прогулка будет очень приятной: картинка будет меняться, вы пройдете и по парку, вдоль яхт и пляжа. И все это с видом на мост. Прогулка займет примерно 1 час 20 минут
   * Ехать на 28 автобусе. Из-за недостатка времени (начали прогулку мы только в 2 часа дня) мы выбрали именно этот вариант. Остановка автобуса находится совсем рядом с вышеупомянутой Chirardelli sq.
@@ -53,5 +53,5 @@ comments: true
   * съездите на одну из самых высоких точек города - **Twin peaks**
   * прогуляйтесь по **SOMA** (южный район города), посмотрите на **AT&T** стадион и позавтракайте в нашем любимом кафе <a target="_blank" href="https://www.google.com/maps/place/Crossroads+Cafe/@37.7831518,-122.3912285,17z/data=!3m1!4b1!4m5!3m4!1s0x8085807795fba00f:0xa591cf34d8738ba4!8m2!3d37.7831518!4d-122.3890398">**Crossroads**</a> 
   
-  
+  <iframe src="https://www.google.com/maps/d/embed?mid=1dgzTXwiiYsns07zyI8LNPyqORUg" width="740" height="380"></iframe>
  
