--- a/_posts/2017-04-24-guests.markdown
+++ b/_posts/2017-04-24-guests.markdown
@@ -26,40 +26,31 @@ comments: true
 
 Пример 1 дня в городе:
 1. старт от **_Pier 39_**: гуляем по пирсу и выходим в лежбищу морских котиков, виду на Алькатрас и Golden Gate Bridge
-
-2. смотрим выступления уличных музыкантов и направляемся в сторону **_Fisherman's Wharf_**. Там гости пробуют Chowder - крабовый суб в булке и кормят чаек, которые тут ~~выросли~~ отъелись до нереальных размером
-
-3. заходим в **_Rainforest cafe_** - смотрим на джунгли, устроенные прямо в магазине, и заглядываем в витрину **_Boudin_**, где мастера хлебопекарного дела выпекают свои новые шедевры
-
-4. идет до **_Chirardelli square_**, где еще в 19 веке Доменико Жирарделли открыл свою шоколадную фабрику. Сейчас же здесь магазины и кафе. Также осталось несколько станков, которые делали шоколад, ну и, конечно, вы можете угоститься нереальнейшим десертом, состоящим из мороженого, шоколада, сливок, сиропов ... и все это в одном десерте
-
-5. нагулявшись вдоволь у вас есть два варианта:
+2. смотрим выступления уличных музыкантов и направляемся в сторону **_Fisherman's Wharf_**. Там в Crab Station гости пробуют Chowder - крабовый суб в булке и кормят чаек, которые тут ~~выросли~~ отъелись до нереальных размером
+3. играем в старинные механические игровые автоматы в **_Musee Mecanique_**
+4. заходим в **_Rainforest cafe_** - смотрим на джунгли, устроенные прямо в магазине, и заглядываем в витрину **_Boudin_**, где мастера хлебопекарного дела выпекают свои новые шедевры
+5. идет до **_Ghirardelli square_**, где еще в 19 веке Доменико Жирарделли открыл свою шоколадную фабрику. Сейчас же здесь магазины и кафе. Также осталось несколько станков, которые делали шоколад, ну и, конечно, вы можете угоститься нереальнейшим десертом, состоящим из мороженого, шоколада, сливок, сиропов ... и все это в одном десерте
+6. нагулявшись вдоволь у вас есть два варианта:
   * Идти пешком до **_Golden Gate bridge_**. Прогулка будет очень приятной: картинка будет меняться, вы пройдете и по парку, вдоль яхт и пляжа. И все это с видом на мост. Прогулка займет примерно 1 час 20 минут
   * Ехать на 28 автобусе. Из-за недостатка времени (начали прогулку мы только в 2 часа дня) мы выбрали именно этот вариант. Остановка автобуса находится совсем рядом с вышеупомянутой Chirardelli sq.
-
-6. как только все оказываются у моста, обычно начинается фотосессия, что неудивительно, ведь многие приезжают в Сан Франциско, чтобы посмотреть мост (который очень потрясает, но не является единственным интересным местом в городе)
-
-7. дальше у вас снова два варианта:
+7. как только все оказываются у моста, обычно начинается фотосессия, что неудивительно, ведь многие приезжают в Сан Франциско, чтобы посмотреть мост (который очень потрясает, но не является единственным интересным местом в городе)
+8. дальше у вас снова два варианта:
   * одни из наших друзей еще по дороге к мосту взяли на прокат велосипеды и, соответственно, поехали через мост и в **_Sausalito_** - очень уютный городок с променадом и видом на  San Francisco
   * брать uber и ехать дальше.  в один из дней мы поехали с ребятами на **_Haight street_**, соседствующую с **_Golden Gate park_**. Улица известна тем, что на ней любили и любят проводить время хиппи. Магазины тут соответствующий, а дух (запах) свободы чувствуется на каждом углу
   * мы же с девочками дошли пешком до **_Baker beach_**, о чем ни разу не пожалели. Ведь я уже рассказывала вам о том, какой вид с него открывается
+9. оттуда мы уже взяли uber и переместились к **_Union aquare_**-  центру современной жизни города. Здесь же рядом  **_Financial district_**, магазины и рестораны. 
+10. так получилось, что еще в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага  **_Macy's_** есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район
+11. через **_Dragon's Gate_** перемещаемся в настоящий Китайский город, где стараемся не сойти с ума от суматохи, которая там творится, насладиться видами красных фонариков, подвещенных через улицу, купить сувениры и направиться дальше
+12. если вы идете по нашему маршруту, то у вас уже должен был наступить вечер и вы должны были оказаться на углу Broadway и Columbus ave. Здесь я советую вам неспешно прогуляться и направиться ко мне в гости- на Stockton street. За чаем и посиделками у камина =)
 
-8. оттуда мы уже взяли uber и переместились к **_Union aquare_**-  центру современной жизни города. Здесь же рядом  **_Financial district_** магазины и рестораны. 
-
-9. так получилось, что еще в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага  **_Macy's_** есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район и " на крыше мира" вы не окажетесь. Но площадь рассмотреть все-же удастся
-
-10. погуляв среди небоскребов, я советую направиться в **_China Town_**. Напоминаю, что маршрут который я описывают стоит повторять только в экстремальных условиях: если вы хотите увидеть все за 2 дня
-
-11. итак, продолжаем... направляемся в **_Dragon's Gate_** и попадаем в самый центра China town-a. Имейте в виду, что после 6 вечера постепенно все магазины там закрываются, что может быть плюсом (меньше суматохи), но и минусом (дешевые сувениры вы не успеете купить)
-
-12. пункт 12 и самый главный - гуляем по Columbus avenue, Stockton стрит и приходим к нам в гости на ароматный чай и посиделки у камина!
-
-Конечно, за один день посмотреть, а самое главное- прочувствовать Сан Франциско у вас не получится. Но я постаралась описать вам реальный маршрут, который мы проделали. 
-
-Из невошедшего:
-1. Golden Gate Park -огромнейший парк (лес), где можно приятно провести время
-2. Ocean beach - пляж на окене 
-3. Twin Peaks - одна из самых высоких точек в городе
-4. Alcatraz - всемирно известная тюрьма
-5& Cable car - 
-
+Конечно, Сан Франциско- огромный город и увидеть все за несколько дней просто невозможно, но вот вам еще неполный список мест, которые приходят мне в голову:
+  * конечно же прогуляться по **Embarcadero**- променаду, идущему от Ferry building и до самого пирса 39
+  * провести время на **Ocean beach**- самом большом пляже в города
+  * соседствующий с пляжем- **Golden Gate park** тоже достоин внимания
+  * прокатиться на старинном рельсовом трамвайчике - **Cable car**
+  * если вам интересно посмотреть на одну из самых зашищенных тюрем - то съездите на **Alcatras**. приятным преимуществом будет прогулка на кораблике. Но имейте в виду, что билет надо покупать Online и заранее
+  * если все-таки тюрьма вам не интересует- покатайтесь на кораблике по заливу: от моста Golden Gate и до Bay Bridge
+  * съездите на одну из самых высоких точек города - **Twin peaks**
+  * прогуляйтесь по **SOMA** (южный район города), посмотрите на **AT&T** стадион и позавтракайте в нашем любимом кафе <a target="_blank" href="https://www.google.com/maps/place/Crossroads+Cafe/@37.7831518,-122.3912285,17z/data=!3m1!4b1!4m5!3m4!1s0x8085807795fba00f:0xa591cf34d8738ba4!8m2!3d37.7831518!4d-122.3890398">**Crossroads**</a> 
+  
+  <iframe src="https://www.google.com/maps/d/embed?mid=1dgzTXwiiYsns07zyI8LNPyqORUg" width="740" height="380"></iframe>
