--- a/_posts/2017-04-24-guests.markdown
+++ b/_posts/2017-04-24-guests.markdown
@@ -13,9 +13,9 @@ comments: true
 
 Как говорит Таня Мишина: "Если ты уезжаешь от Veeam-а, то Veeam приедет к тебе". Я верила ее словам, ведь она теперь живет в Праге. А от Праги до Питера лететь меньше 3х часов. Даже мы успели слетать туда прошлой осенью.
 
-Но когда мне начали поступать сообщения от ребят с моей прошлой работы о том, что Presidents club (поездка-вознаграждение от компании за успешное закрытие годового плана) в этом году на Гавайях и как продолжение они планируют путешествии по Америке, то я была очень удивлена и обрадована одновременно. 
+Но когда мне начали поступать сообщения от ребят из Veeam о том, что Presidents club (поездка-вознаграждение от компании за успешное закрытие годового плана) в этом году будет на Гавайях и, как продолжение, они планируют путешествии по Америке, то я была очень удивлена и обрадована одновременно. 
 
-Очень классно было погулять вместе, ведь мы часто ездили в командировки и уже оказывались туристами в разных городах и странах. Тут же я играла роль "местного" и старалась показать им  или направить их в самые интересные места. Чувствовала ответственность, ведь мне очень нравится этот город и я хочу, чтобы произвел хорошее впечатление и на моих друзей. 
+Очень классно было погулять вместе с вимовцами и их друзьями, ведь мы часто ездили в командировки и уже оказывались туристами в разных городах и странах. В этот же раз я попробовала на себя роль "местного" и старалась показать им, или направить их в самые интересные места. Чувствовала ответственность, ведь мне очень нравится этот город и я хотела, чтобы он произвел хорошее впечатление и на моих друзей. 
 
 Были и прекрасные прогулки вдоль океана, и карабканья на высокие холмы, и посиделки дома. 
 
@@ -25,32 +25,35 @@ comments: true
 По результатам наших гуляний у меня сформировалось несколько маршрутов и список must see мест в городе. Поделюсь я ими и с вами. Ведь кто знает- может и вы приедите к нам в гости!
 
 Пример 1 дня в городе:
-1. старт от **_Pier 39_**: гуляем по пирсу и выходим в лежбищу морских котиков, виду на Алькатрас и Golden Gate Bridge
-2. смотрим выступления уличных музыкантов и направляемся в сторону **_Fisherman's Wharf_**. Там в Crab Station гости пробуют Chowder - крабовый суб в булке и кормят чаек, которые тут ~~выросли~~ отъелись до нереальных размером
+1. старт от **_Pier 39_**: неспешно гуляем по пирсу и выходим в лежбищу морских котиков, виду на Алькатрас и Golden Gate Bridge
+2. смотрим выступления уличных музыкантов и направляемся в сторону **_Fisherman's Wharf_**. Там в Crab Station желающие пробуют Chowder - крабовый суб в булке и кормят чаек, которые тут ~~выросли~~ отъелись до нереальных размером
 3. играем в старинные механические игровые автоматы в **_Musee Mecanique_**
 4. заходим в **_Rainforest cafe_** - смотрим на джунгли, устроенные прямо в магазине, и заглядываем в витрину **_Boudin_**, где мастера хлебопекарного дела выпекают свои новые шедевры
-5. идет до **_Ghirardelli square_**, где еще в 19 веке Доменико Жирарделли открыл свою шоколадную фабрику. Сейчас же здесь магазины и кафе. Также осталось несколько станков, которые делали шоколад, ну и, конечно, вы можете угоститься нереальнейшим десертом, состоящим из мороженого, шоколада, сливок, сиропов ... и все это в одном десерте
+5. идем до **_Ghirardelli square_**, где еще в 19 веке Доменико Жирарделли открыл свою шоколадную фабрику. Сейчас же здесь магазины и кафе. Также осталось несколько станков, которые делали шоколад, ну и, конечно, вы можете угоститься нереальнейшим десертом, состоящим из мороженого, шоколада, сливок, сиропов ...и тд
 6. нагулявшись вдоволь у вас есть два варианта:
-  * Идти пешком до **_Golden Gate bridge_**. Прогулка будет очень приятной: картинка будет меняться, вы пройдете и по парку, вдоль яхт и пляжа. И все это с видом на мост. Прогулка займет примерно 1 час 20 минут
+  * Идти пешком до **_Golden Gate bridge_**. Прогулка будет очень приятной: картинка будет меняться, вы пройдете по парку, вдоль яхт и пляжа. И все это с видом на мост. Этот маршрут займет примерно 1 час 30 минут
   * Ехать на 28 автобусе. Из-за недостатка времени (начали прогулку мы только в 2 часа дня) мы выбрали именно этот вариант. Остановка автобуса находится совсем рядом с вышеупомянутой Chirardelli sq.
 7. как только все оказываются у моста, обычно начинается фотосессия, что неудивительно, ведь многие приезжают в Сан Франциско, чтобы посмотреть мост (который очень потрясает, но не является единственным интересным местом в городе)
 8. дальше у вас снова два варианта:
-  * одни из наших друзей еще по дороге к мосту взяли на прокат велосипеды и, соответственно, поехали через мост и в **_Sausalito_** - очень уютный городок с променадом и видом на  San Francisco
-  * брать uber и ехать дальше.  в один из дней мы поехали с ребятами на **_Haight street_**, соседствующую с **_Golden Gate park_**. Улица известна тем, что на ней любили и любят проводить время хиппи. Магазины тут соответствующий, а дух (запах) свободы чувствуется на каждом углу
+  * одни из наших друзей еще по дороге к мосту взяли на прокат велосипеды, поехали через мост и в **_Sausalito_** - очень уютный городок с променадом и видом на  San Francisco
+  * брать uber и ехать дальше.  в один из дней мы поехали с ребятами на **_Haight street_**, соседствующую с **_Golden Gate park_**. Улица известна тем, что на ней любили и любят проводить время хиппи. Магазины тут соответствующие, а дух (запах) свободы чувствуется на каждом углу
   * мы же с девочками дошли пешком до **_Baker beach_**, о чем ни разу не пожалели. Ведь я уже рассказывала вам о том, какой вид с него открывается
-9. оттуда мы уже взяли uber и переместились к **_Union aquare_**-  центру современной жизни города. Здесь же рядом  **_Financial district_**, магазины и рестораны. 
-10. так получилось, что еще в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага  **_Macy's_** есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район
+9. оттуда мы уже взяли uber и переместились к **_Union square_** - центру современной жизни города. Здесь же рядом  **_Financial district_**, магазины и рестораны. 
+10. так получилось, что еще в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага **_Macy's_** есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район и соседние дома закроют вам вид на океан.
 11. через **_Dragon's Gate_** перемещаемся в настоящий Китайский город, где стараемся не сойти с ума от суматохи, которая там творится, насладиться видами красных фонариков, подвещенных через улицу, купить сувениры и направиться дальше
-12. если вы идете по нашему маршруту, то у вас уже должен был наступить вечер и вы должны были оказаться на углу Broadway и Columbus ave. Здесь я советую вам неспешно прогуляться и направиться ко мне в гости- на Stockton street. За чаем и посиделками у камина =)
+12. если вы идете по нашему маршруту, то у вас уже должен был наступить вечер и вы должны были оказаться на углу Broadway и Columbus ave. Здесь я советую вам неспешно прогуляться и направиться ко мне в гости - на Stockton street. За чаем и посиделками у камина =) 
 
-Конечно, Сан Франциско- огромный город и увидеть все за несколько дней просто невозможно, но вот вам еще неполный список мест, которые приходят мне в голову:
-  * конечно же прогуляться по **Embarcadero**- променаду, идущему от Ferry building и до самого пирса 39
-  * провести время на **Ocean beach**- самом большом пляже в города
+Конечно, Сан Франциско- огромный город и увидеть все за несколько дней просто невозможно, но вот вам еще неполный список мест, которые я бы очень хотела, чтобы вы сделали:
+  * конечно же прогулялись по **Embarcadero**- променаду, идущему от Ferry building и до самого пирса 39
+  * провели время на **Ocean beach**- самом большом пляже в города
   * соседствующий с пляжем- **Golden Gate park** тоже достоин внимания
-  * прокатиться на старинном рельсовом трамвайчике - **Cable car**
+  * прокатились на старинном рельсовом трамвайчике - **Cable car** (возьмите меня с собой, ведь я этого пока так и не сделала)
   * если вам интересно посмотреть на одну из самых зашищенных тюрем - то съездите на **Alcatras**. приятным преимуществом будет прогулка на кораблике. Но имейте в виду, что билет надо покупать Online и заранее
   * если все-таки тюрьма вам не интересует- покатайтесь на кораблике по заливу: от моста Golden Gate и до Bay Bridge
   * съездите на одну из самых высоких точек города - **Twin peaks**
-  * прогуляйтесь по **SOMA** (южный район города), посмотрите на **AT&T** стадион и позавтракайте в нашем любимом кафе <a target="_blank" href="https://www.google.com/maps/place/Crossroads+Cafe/@37.7831518,-122.3912285,17z/data=!3m1!4b1!4m5!3m4!1s0x8085807795fba00f:0xa591cf34d8738ba4!8m2!3d37.7831518!4d-122.3890398">**Crossroads**</a> 
+  * прогуляйтесь по **SOMA** (южный район города), посмотрите на **AT&T** стадион и перекусите в нашем любимом кафе <a target="_blank" href="https://www.google.com/maps/place/Crossroads+Cafe/@37.7831518,-122.3912285,17z/data=!3m1!4b1!4m5!3m4!1s0x8085807795fba00f:0xa591cf34d8738ba4!8m2!3d37.7831518!4d-122.3890398">**Crossroads**</a> 
   
+Я создала карту, на которой отметила все места, упомянутые в моем рассказе. Вы также можете ее открыть на весь экран по <a target="_blank" href="https://www.google.com/maps/d/viewer?mid=1dgzTXwiiYsns07zyI8LNPyqORUg&ll=37.809919151672666%2C-122.4411811&z=12"> этой ссылке</a>.
+И конечно же фотографии ниже! Жду вас в гости!
+
   <iframe src="https://www.google.com/maps/d/embed?mid=1dgzTXwiiYsns07zyI8LNPyqORUg" width="740" height="380"></iframe>
