--- a/_posts/2017-04-24-guests.markdown
+++ b/_posts/2017-04-24-guests.markdown
@@ -3,7 +3,23 @@ layout: post
 title:  "Гости, приезжайте еще!"
 date:   2017-04-24 12:00:24 -0800
 comments: true
-
+images:
+  - 
+  - 2017-05-01 05.04.16.jpg
+  - 2017-05-01 05.04.38.jpg
+  - IMG_9765.JPG
+  - IMG_9794.JPG
+  - IMG_9800.JPG
+  - IMG_9814.JPG
+  - IMG_9848.JPG
+  - IMG_9868.JPG
+  - IMG_9873.JPG
+  - IMG_9885.JPG
+  - IMG_9896.JPG
+  - IMG_9804.JPG
+  - IMG_9902.JPG
+  - IMG_9915.JPG
+  - IMG_9917.JPG
 ---
 
 Давно от меня не было поста. Так странно, сама себе придумала блог, а теперь переживаю, что не успеваю писать. 
@@ -17,34 +33,48 @@ comments: true
 
 Очень классно было погулять вместе с вимовцами и их друзьями, ведь мы часто ездили в командировки и уже оказывались туристами в разных городах и странах. В этот же раз я попробовала на себя роль "местного" и старалась показать им, или направить их в самые интересные места. Чувствовала ответственность, ведь мне очень нравится этот город и я хотела, чтобы он произвел хорошее впечатление и на моих друзей. 
 
+{% include image src="IMG_0191.JPG" %}
+
 Были и прекрасные прогулки вдоль океана, и карабканья на высокие холмы, и посиделки дома. 
 
 Судя по впечатлениям от ребят визитом они остались довольны, только времени было мало. Практически все выделили около 2-3 дней на город и дальше отправлялись по маршруту Sacramento->Lake Tahoe->Yosemite->Las Vegas->Grand Canyon->LA. 
 
 
-По результатам наших гуляний у меня сформировалось несколько маршрутов и список must see мест в городе. Поделюсь я ими и с вами. Ведь кто знает- может и вы приедите к нам в гости!
+По результатам наших гуляний у меня сформировалось несколько маршрутов и список must see мест в городе. Поделюсь я ими и с вами. Ведь кто знает- может и вы приедете к нам в гости!
 
-Пример 1 дня в городе:
-1. старт от **_Pier 39_**: неспешно гуляем по пирсу и выходим в лежбищу морских котиков, виду на Алькатрас и Golden Gate Bridge
-2. смотрим выступления уличных музыкантов и направляемся в сторону **_Fisherman's Wharf_**. Там в Crab Station желающие пробуют Chowder - крабовый суб в булке и кормят чаек, которые тут ~~выросли~~ отъелись до нереальных размером
-3. играем в старинные механические игровые автоматы в **_Musee Mecanique_**
-4. заходим в **_Rainforest cafe_** - смотрим на джунгли, устроенные прямо в магазине, и заглядываем в витрину **_Boudin_**, где мастера хлебопекарного дела выпекают свои новые шедевры
-5. идем до **_Ghirardelli square_**, где еще в 19 веке Доменико Жирарделли открыл свою шоколадную фабрику. Сейчас же здесь магазины и кафе. Также осталось несколько станков, которые делали шоколад, ну и, конечно, вы можете угоститься нереальнейшим десертом, состоящим из мороженого, шоколада, сливок, сиропов ...и тд
-6. нагулявшись вдоволь у вас есть два варианта:
+**_Пример 1 дня в городе:_**
+
+* старт от **_Pier 39_**: неспешно гуляем по пирсу и выходим в лежбищу морских котиков, виду на Алькатрас и Golden Gate Bridge
+ {% include image src="IMG_9813.JPG" %}
+*  смотрим выступления уличных музыкантов и направляемся в сторону **_Fisherman's Wharf_**. Там в Crab Station желающие пробуют Chowder - крабовый суб в булке и кормят чаек, которые тут ~~выросли~~ отъелись до нереальных размером
+
+ {% include image src="2017-04-14_11-47-21_000.jpeg" %}
+
+* играем в старинные механические игровые автоматы в **_Musee Mecanique_**
+* заходим в **_Rainforest cafe_** - смотрим на джунгли, устроенные прямо в магазине, и заглядываем в витрину **_Boudin_**, где мастера хлебопекарного дела выпекают свои новые шедевры
+* идем до **_Ghirardelli square_**, где еще в 19 веке Доменико Жирарделли открыл свою шоколадную фабрику. Сейчас же здесь магазины и кафе. Также осталось несколько станков, которые делали шоколад, ну и, конечно, вы можете угоститься нереальнейшим десертом, состоящим из мороженого, шоколада, сливок, сиропов ...и тд
+* нагулявшись вдоволь у вас есть два варианта:
   * Идти пешком до **_Golden Gate bridge_**. Прогулка будет очень приятной: картинка будет меняться, вы пройдете по парку, вдоль яхт и пляжа. И все это с видом на мост. Этот маршрут займет примерно 1 час 30 минут
   * Ехать на 28 автобусе. Из-за недостатка времени (начали прогулку мы только в 2 часа дня) мы выбрали именно этот вариант. Остановка автобуса находится совсем рядом с вышеупомянутой Chirardelli sq.
-7. как только все оказываются у моста, обычно начинается фотосессия, что неудивительно, ведь многие приезжают в Сан Франциско, чтобы посмотреть мост (который очень потрясает, но не является единственным интересным местом в городе)
-8. дальше у вас снова два варианта:
+
+  {% include image src="IMG_9901.JPG" %}
+
+* как только все оказываются у моста, обычно начинается фотосессия, что неудивительно, ведь многие приезжают в Сан Франциско, чтобы посмотреть мост (который очень потрясает, но не является единственным интересным местом в городе)
+* дальше у вас снова два варианта:
   * одни из наших друзей еще по дороге к мосту взяли на прокат велосипеды, поехали через мост и в **_Sausalito_** - очень уютный городок с променадом и видом на  San Francisco
   * брать uber и ехать дальше.  в один из дней мы поехали с ребятами на **_Haight street_**, соседствующую с **_Golden Gate park_**. Улица известна тем, что на ней любили и любят проводить время хиппи. Магазины тут соответствующие, а дух (запах) свободы чувствуется на каждом углу
   * мы же с девочками дошли пешком до **_Baker beach_**, о чем ни разу не пожалели. Ведь я уже рассказывала вам о том, какой вид с него открывается
-9. оттуда мы уже взяли uber и переместились к **_Union square_** - центру современной жизни города. Здесь же рядом  **_Financial district_**, магазины и рестораны. 
-10. так получилось, что еще в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага **_Macy's_** есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район и соседние дома закроют вам вид на океан.
-11. через **_Dragon's Gate_** перемещаемся в настоящий Китайский город, где стараемся не сойти с ума от суматохи, которая там творится, насладиться видами красных фонариков, подвещенных через улицу, купить сувениры и направиться дальше
-12. если вы идете по нашему маршруту, то у вас уже должен был наступить вечер и вы должны были оказаться на углу Broadway и Columbus ave. Здесь я советую вам неспешно прогуляться и направиться ко мне в гости - на Stockton street. За чаем и посиделками у камина =) 
+* оттуда мы уже взяли uber и переместились к **_Union square_** - центру современной жизни города. Здесь же рядом  **_Financial district_**, магазины и рестораны. 
+* так получилось, что еще в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага **_Macy's_** есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район и соседние дома закроют вам вид на океан.
+* через **_Dragon's Gate_** перемещаемся в настоящий Китайский город, где стараемся не сойти с ума от суматохи, которая там творится, насладиться видами красных фонариков, подвещенных через улицу, купить сувениры и направиться дальше
 
-Конечно, Сан Франциско- огромный город и увидеть все за несколько дней просто невозможно, но вот вам еще неполный список мест, которые я бы очень хотела, чтобы вы сделали:
-  * конечно же прогулялись по **Embarcadero**- променаду, идущему от Ferry building и до самого пирса 39
+{% include image src="2017-05-01 05.03.38.jpg" %}
+
+* если вы идете по нашему маршруту, то у вас уже должен был наступить вечер и вы должны были оказаться на углу Broadway и Columbus ave. Здесь я советую вам неспешно прогуляться и направиться ко мне в гости - на Stockton street. За чаем и посиделками у камина =) 
+
+Конечно, Сан Франциско- огромный город и увидеть все за несколько дней просто невозможно, но вот вам еще неполный список мест, которые я бы очень хотела, чтобы вы посетили:
+
+  * прогулялись по **Embarcadero**- променаду, идущему от Ferry building и до самого пирса 39
   * провели время на **Ocean beach**- самом большом пляже в города
   * соседствующий с пляжем- **Golden Gate park** тоже достоин внимания
   * прокатились на старинном рельсовом трамвайчике - **Cable car** (возьмите меня с собой, ведь я этого пока так и не сделала)
