--- a/_posts/2017-05-01-guests.markdown
+++ b/_posts/2017-05-01-guests.markdown
@@ -72,7 +72,7 @@ images:
 
 {% include image src="2017-05-01 05.03.38.jpg" %}
 
-* если вы идете по нашему маршруту, то у вас уже должен был наступить вечер и вы должны были оказаться на углу Broadway и Columbus ave. Здесь я советую вам неспешно прогуляться и направиться ко мне в гости - на Stockton street. За чаем и посиделками у камина =) 
+* если вы идете по нашему маршруту, то у вас уже должен был наступить вечер и вы должны были оказаться на углу Broadway и Columbus ave. Здесь, я советую вам неспешно прогуляться и направиться ко мне в гости - на Stockton street. За чаем и посиделками у камина =) 
 
 Конечно, Сан Франциско- огромный город и увидеть все за несколько дней просто невозможно, но вот вам еще неполный список мест, которые я бы очень хотела, чтобы вы посетили:
 
