--- a/_posts/2017-05-01-guests.markdown
+++ b/_posts/2017-05-01-guests.markdown
@@ -39,7 +39,7 @@ images:
 
 Были и прекрасные прогулки вдоль океана, и карабканья на высокие холмы, и посиделки дома. 
 
-Судя по впечатлениям от ребят визитом они остались довольны, только времени было мало. Практически все выделили около 2-3 дней на город и дальше отправлялись по маршруту Sacramento->Lake Tahoe->Yosemite->Las Vegas->Grand Canyon->LA. 
+Судя по впечатлениям от ребят, визитом они остались довольны, только времени было мало. Практически все выделили около 2-3 дней на город и дальше отправлялись по маршруту Sacramento->Lake Tahoe->Yosemite->Las Vegas->Grand Canyon->LA. 
 
 
 По результатам наших гуляний у меня сформировалось несколько маршрутов и список must see мест в городе. Поделюсь я ими и с вами. Ведь кто знает- может и вы приедете к нам в гости!
