Ghirardelli typo fix

--- a/_posts/2017-05-01-guests.markdown
+++ b/_posts/2017-05-01-guests.markdown
@@ -57,7 +57,7 @@ images:
 * идем до **_Ghirardelli square_**, где еще в 19 веке Доменико Жирарделли открыл свою шоколадную фабрику. Сейчас же здесь магазины и кафе. Также осталось несколько станков, которые делали шоколад, ну и, конечно, вы можете угоститься нереальнейшим десертом, состоящим из мороженого, шоколада, сливок, сиропов ...и тд
 * нагулявшись вдоволь у вас есть два варианта:
   * Идти пешком до **_Golden Gate bridge_**. Прогулка будет очень приятной: картинка будет меняться, вы пройдете по парку, вдоль яхт и пляжа. И все это с видом на мост. Этот маршрут займет примерно 1 час 30 минут
-  * Ехать на 28 автобусе. Из-за недостатка времени (начали прогулку мы только в 2 часа дня) мы выбрали именно этот вариант. Остановка автобуса находится совсем рядом с вышеупомянутой Chirardelli sq.
+  * Ехать на 28 автобусе. Из-за недостатка времени (начали прогулку мы только в 2 часа дня) мы выбрали именно этот вариант. Остановка автобуса находится совсем рядом с вышеупомянутой Ghirardelli sq.
 
   {% include image src="IMG_9901.JPG" %}
 
