post typo updates

--- a/_posts/2017-05-01-guests.markdown
+++ b/_posts/2017-05-01-guests.markdown
@@ -11,12 +11,10 @@ images:
   - 2017-05-01 05.04.16.jpg
   - IMG_97651.JPG
   - IMG_9794.JPG
-  - IMG_9813.JPG
   - IMG_98141.JPG
-  - IMG_9848.JPG
-  - IMG_9868.JPG
-  - IMG_9873.JPG
   - IMG_9885.JPG
+  - IMG_9848.JPG
+  - IMG_9873.JPG
   - IMG_9896.JPG
   - IMG_99021.JPG
   - IMG_99171.JPG
@@ -44,11 +42,11 @@ images:
 
 По результатам наших гуляний у меня сформировалось несколько маршрутов и список must see мест в городе. Поделюсь я ими и с вами. Ведь кто знает- может и вы приедете к нам в гости!
 
-**_Пример 1 дня в городе:_**
+**_Пример 1 дня в городе (карта со всеми упомянутыми местами и маршрутами ниже):_**
 
 * старт от **_Pier 39_**: неспешно гуляем по пирсу и выходим в лежбищу морских котиков, виду на Алькатрас и Golden Gate Bridge
  {% include image src="IMG_9813.JPG" %}
-*  смотрим выступления уличных музыкантов и направляемся в сторону **_Fisherman's Wharf_**. Там в Crab Station желающие пробуют Chowder - крабовый суб в булке и кормят чаек, которые тут ~~выросли~~ отъелись до нереальных размером
+*  смотрим выступления уличных музыкантов и направляемся в сторону **_Fisherman's Wharf_**. Там в Crab Station желающие пробуют Chowder - крабовый суп в булке и кормят чаек, которые тут ~~выросли~~ отъелись до нереальных размером
 
  {% include image src="2017-04-14_11-47-21_000.jpeg" %}
 
@@ -67,7 +65,7 @@ images:
   * брать uber и ехать дальше.  в один из дней мы поехали с ребятами на **_Haight street_**, соседствующую с **_Golden Gate park_**. Улица известна тем, что на ней любили и любят проводить время хиппи. Магазины тут соответствующие, а дух (запах) свободы чувствуется на каждом углу
   * мы же с девочками дошли пешком до **_Baker beach_**, о чем ни разу не пожалели. Ведь я уже рассказывала вам о том, какой вид с него открывается
 * оттуда мы уже взяли uber и переместились к **_Union square_** - центру современной жизни города. Здесь же рядом  **_Financial district_**, магазины и рестораны. 
-* так получилось, что еще в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага **_Macy's_** есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район и соседние дома закроют вам вид на океан.
+* так получилось, что еще в прошлую свою поездку, как туристы, мы узнали, что на верхнем этаже универмага **_Macy's_** есть ресторан **_Cheesecake factory_**, а в этом ресторане при входе есть балкон, на который можно легко выйти. Перед вами откроется вида на Union square. Только имейте в виду, что все-таки рядом финансовый район и соседние дома закроют вам вид на океан.
 * через **_Dragon's Gate_** перемещаемся в настоящий Китайский город, где стараемся не сойти с ума от суматохи, которая там творится, насладиться видами красных фонариков, подвещенных через улицу, купить сувениры и направиться дальше
 
 {% include image src="2017-05-01 05.03.38.jpg" %}
@@ -76,12 +74,12 @@ images:
 
 Конечно, Сан Франциско- огромный город и увидеть все за несколько дней просто невозможно, но вот вам еще неполный список мест, которые я бы очень хотела, чтобы вы посетили:
 
-  * прогулялись по **Embarcadero**- променаду, идущему от Ferry building и до самого пирса 39
-  * провели время на **Ocean beach**- самом большом пляже в города
+  * прогулялись по **Embarcadero** - променаду, идущему от **Ferry building** и до самого пирса 39
+  * провели время на **Ocean beach** - самом большом пляже в города
   * соседствующий с пляжем- **Golden Gate park** тоже достоин внимания
   * прокатились на старинном рельсовом трамвайчике - **Cable car** (возьмите меня с собой, ведь я этого пока так и не сделала)
   * если вам интересно посмотреть на одну из самых зашищенных тюрем - то съездите на **Alcatras**. приятным преимуществом будет прогулка на кораблике. Но имейте в виду, что билет надо покупать Online и заранее
-  * если все-таки тюрьма вам не интересует- покатайтесь на кораблике по заливу: от моста Golden Gate и до Bay Bridge
+  * если все-таки тюрьма вам не интересует - покатайтесь на кораблике по заливу: от моста Golden Gate и до Bay Bridge
   * съездите на одну из самых высоких точек города - **Twin peaks**
   * прогуляйтесь по **SOMA** (южный район города), посмотрите на **AT&T** стадион и перекусите в нашем любимом кафе <a target="_blank" href="https://www.google.com/maps/place/Crossroads+Cafe/@37.7831518,-122.3912285,17z/data=!3m1!4b1!4m5!3m4!1s0x8085807795fba00f:0xa591cf34d8738ba4!8m2!3d37.7831518!4d-122.3890398">**Crossroads**</a> 
   
