--- a/_posts/2017-03-17-5years.markdown
+++ b/_posts/2017-03-17-5years.markdown
@@ -13,4 +13,4 @@ comments: true
 И остального- наверное нечего добавить. Хорошая была неделя. Мы не перестаем делать романтические прогулки вечером в окрестностях пирса. А завтра мы поедем в новый road trip. В планах Monterey, Carmel by the sea и Big Sur, если нам повезет в него пробраться, ведь дорога похоже перекрыта. 
 Спасибо, что читаете! Я вернусь после выходных! 
 
-![sunset](/assets/images/posts/2017-03-17-5years/2017-02-23_17-43-01_915.jpeg)
+{% include image src="2017-02-23_17-43-01_915.jpeg" %}
