--- a/_posts/2017-03-17-5years.markdown
+++ b/_posts/2017-03-17-5years.markdown
@@ -4,6 +4,8 @@ title:  "Пять лет вместе. Это много или мало?"
 date:   2017-03-17 21:25:24 -0800
 categories: jekyll update
 comments: true
+thumbnail: 2017-02-23_17-43-01_915.jpeg
+
 ---
 
 Итак, пять дней с прошлого поста- подводим итоги. Наверное цифра пять тут не с проста. Ведь в понедельник было именно пять лет с нашего первого свидания. Даже не верится, что прошло столько времени. Хотя, наверное, бывалые скажут, что все еще у вас впереди! Так и есть, я совершенно согласна. 
