--- a/_posts/2017-02-10-new-apt.markdown
+++ b/_posts/2017-02-10-new-apt.markdown
@@ -4,11 +4,13 @@ title:  "\"Big day\""
 date:   2017-02-10 21:25:24 -0800
 categories: jekyll update
 comments: true
+thumbnail: 2017-02-10_20-36-12_626.jpeg
 images:
   - 2017-02-10_17-29-44_609.jpeg
   - 2017-02-10_17-44-31_861.jpeg
   - 2017-02-10_17-43-20_702.jpeg
   - 2017-02-10_20-36-12_626.jpeg
+
 ---
 
 Прошла рабочая неделя, впереди выходные. И как-то знаете, с одной стороны много всего было, а с другой- очень быстро она пролетела. Это то чувство, когда ты приезжаешь в лагерь и первые два дня длятся целую вечность, а оставшееся время от смены пролетает в миг. Или первые дни отпуска? 
