--- a/_posts/2017-06-22-san-diego.markdown
+++ b/_posts/2017-06-22-san-diego.markdown
@@ -14,9 +14,10 @@ thumbnail: alla-home.jpg
 
 <!--separate--> 
 
-Вы нас хорошо знаете, поэтому рассказывать о том, что мы - не большие любители поездок на машине на далекие расстояния (да, 800 км в одну сторону - это далеко). Поэтому у нас родился план, который мы и осуществили. Чтобы не ехать слишком долго, в первый день мы доехали до мотеля в Лос Анжелесе и легли спать. А на следующий день нас ждал Он - парк развлечений Universal Studios! 
+Вы нас хорошо знаете, поэтому рассказывать о том, что мы - не большие любители поездок на машине на далекие расстояния (да, 800 км в одну сторону - это далеко). Поэтому у нас родился план, который мы и осуществили. Чтобы не ехать слишком долго, в первый день мы доехали до мотеля в Лос Анжелесе и легли спать. А на следующий день нас ждал Он - тематический парк развлечений Universal Studios! 
 
 Знаете, бывают такие детские мечты, которые остаются мечтами, пока их не исполнишь. Когда я приезжала в Америку 6 лет назад, я очень хотела попасть в этот парк. Но как-то обстоятельства не сложились и я дошла только до входа (фото в доказательство ниже). 
 В этот же раз у нас все было по-серьезному. Отель совсем рядом с парком, чтобы можно было не думать о парковке, заранее купленные и распечатанные билеты и боевой настрой опробовать все аттракционы. 
 
-парку 53 года
+Парк был основан самой старой и известной киностудией в Голливуде 53 года назад. Изначальная идея заключалась в том, чтобы обычные люди могли немного прикоснуться к "миру звезд", то есть походить по студии и посмотреть, где и как снимают мировые бестселлеры.
+Теперь же парк - это не только экскурсия по студии, но и огромное количество аттракционов, кафе, ресторанов ... и других способов потратить деньги. 
