--- a/_posts/2017-06-22-san-diego.markdown
+++ b/_posts/2017-06-22-san-diego.markdown
@@ -19,5 +19,6 @@ thumbnail: alla-home.jpg
 Знаете, бывают такие детские мечты, которые остаются мечтами, пока их не исполнишь. Когда я приезжала в Америку 6 лет назад, я очень хотела попасть в этот парк. Но как-то обстоятельства не сложились и я дошла только до входа (фото в доказательство ниже). 
 В этот же раз у нас все было по-серьезному. Отель совсем рядом с парком, чтобы можно было не думать о парковке, заранее купленные и распечатанные билеты и боевой настрой опробовать все аттракционы. 
 
+
 Парк был основан самой старой и известной киностудией в Голливуде 53 года назад. Изначальная идея заключалась в том, чтобы обычные люди могли немного прикоснуться к "миру звезд", то есть походить по студии и посмотреть, где и как снимают мировые бестселлеры.
-Теперь же парк - это не только экскурсия по студии, но и огромное количество аттракционов, кафе, ресторанов ... и других способов потратить деньги. 
+Теперь же парк - это не только экскурсия по студии, но и огромное количество аттракционов, кафе, ресторанов ... и других способов потратить деньги. 333 
