--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -13,13 +13,29 @@ images:
  
 <!--separate--> 
 
-Обзор мой будет состоять только из тех магазинов, в которые мы попадаем живя в городе. Я уверена, что в окрестностях есть много прекрасных магазинов о существовании которых мы не знаем. 
+Обзор мой будет состоять только из тех магазинов, в которые мы попадаем живя в городе. Я уверена, что в окрестностях есть много прекрасных магазинов о существовании которых мы не знаем. Один из таких магазинов - Costco. Это оптовый магазин, где народ покупает все: от продуктов питания до абонементов на фитнес, билетов в Диснейленд и бензина. Так как у нас нет машины, туда мы не едим.
 
-Поэтому сегодня в своем рассказе я остановлюсь на: Safeway, Trader Joe's, Whole Foods и чайна таун. 
+Поэтому сегодня в своем рассказе я остановлюсь на: Safeway, Trader Joe's, чайна таун и Whole Foods. Это те места, где мы покупаем продукты.
 
-Ниже пример корзины продуктов на обсущую стоимость $72
+
+
+
+
+
+
+
+ 
+
+Ниже пример корзины продуктов на общую сумму $72
 {% include image src="trader joe's bag.jpg" %}
 
-Здесь вы можете заметить:
-*cottage cheese - творог. на вкус похоже на то, что в питере называется зерновым творогом, только с солью ... гр ...$
- *
+* cottage cheese - творог. на вкус похоже на то, что в питере называется зерновым творогом, только с солью ... гр ...$
+* грецкие орехи и кешью
+* зелень
+* цельнозерновые хлебцы
+* beef-less: вегетарианский фарш (на вкус и вид ничем не отличается от обычного)
+* вегетарианские сосиски (тоже самое, что и с мясом)
+* черный шоколад без сахара $1.99
+* изюм 
+* миндальное молочко
+* кокосовое масло
