--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -9,13 +9,20 @@ images:
 ---
 
 Пожалуй, один из самых актуальных вопросов. Первое, с чем вы столкнетесь, как только приедете в штаты - это еда. Вам нужно будет что-то поесть. 
-С этим вопросом столкнулись мы. А теперь, почти через пол-года жизни в Сан Франциско, я готова поведать, что же мы едим, где мы покупаем продукты и сколько нам это стоит.
+С этим вопросом столкнулись и мы. А теперь, почти через пол-года жизни в Сан Франциско, я готова поведать, что же мы едим, где мы покупаем продукты и сколько нам это стоит.
  
 <!--separate--> 
 
 Обзор мой будет состоять только из тех магазинов, в которые мы попадаем живя в городе. Я уверена, что в окрестностях есть много прекрасных магазинов о существовании которых мы не знаем. Один из таких магазинов - Costco. Это оптовый магазин, где народ покупает все: от продуктов питания до абонементов на фитнес, билетов в Диснейленд и бензина. Так как у нас нет машины, туда мы не едим.
 
-Поэтому сегодня в своем рассказе я остановлюсь на: Safeway, Trader Joe's, чайна таун и Whole Foods. Это те места, где мы покупаем продукты.
+Поэтому сегодня в своем рассказе я остановлюсь на: Safeway, Trader Joe's, China Town Whole Foods. Здесь мы покупаем продукты.
+
+Хочу начать с фруктов и овощей. Потому что, во-первых, про них проще рассказать. А во-вторых, их мы едим больше всего.
+
+Где можно купить фрукты и овощи?
+В любом супермаркете, farmer's market, China Town
+
+Нам очень повезло, ровно по середине между нашим домом и финансовым центром города находится China Town. 
 
 
 
@@ -24,7 +31,8 @@ images:
 
 
 
- 
+
+
 
 Ниже пример корзины продуктов на общую сумму $72
 {% include image src="trader joe's bag.jpg" %}
