--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -13,6 +13,13 @@ images:
  
 <!--separate--> 
 
+Итак, первое с чем столкнется европейский путешественник - это совершенно незнакомые меры измерения.
+
+На милях вместо километров дело не остановилось. Здесь не миллилитры, а унции и галлоны (1 oz=29.57 ml, 1 gallon=3785 ml). 
+Не граммы/килограммы, а паунды (1 pound=453.6 gramm). Желательно иметь хотя бы примерное представление об этих незнакомых нам понятиям перед своим первым походом за продуктами.
+
+
+
 Обзор мой будет состоять только из тех магазинов, в которые мы попадаем живя в городе. Я уверена, что в окрестностях есть много прекрасных магазинов о существовании которых мы не знаем. Один из таких магазинов - Costco. Это оптовый магазин, где народ покупает все: от продуктов питания до абонементов на фитнес, билетов в Диснейленд и бензина. Так как у нас нет машины, туда мы не едим.
 
 Поэтому сегодня в своем рассказе я остановлюсь на: Safeway, Trader Joe's, China Town Whole Foods. Здесь мы покупаем продукты.
