--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -8,15 +8,20 @@ thumbnail:
 images:
 ---
 
-Пожалуй, один из самых актуальных вопросов. Первое, с чем вы столкнетесь, как только приедете в штаты - это еда. Вам нужно будет что-то поесть. 
+Пожалуй, одна из самых актуальных тем для обсуждения. Скажу сразу, про McDonalds и прочие фастфуды вы здесь не прочитаете. Я хочу рассказать, как, что и где можно купить для здорового рациона семьи. 
+
+Первое, с чем вы столкнетесь, как только приедете в штаты - это еда. Вам нужно будет что-то поесть. 
 С этим вопросом столкнулись и мы. А теперь, почти через пол-года жизни в Сан Франциско, я готова поведать, что же мы едим, где мы покупаем продукты и сколько нам это стоит.
  
 <!--separate--> 
 
-Итак, первое с чем столкнется европейский путешественник - это совершенно незнакомые меры измерения.
+Первое с чем столкнется европейский путешественник - это совершенно незнакомые меры измерения.
 
-На милях вместо километров дело не остановилось. Здесь не миллилитры, а унции и галлоны (1 oz=29.57 ml, 1 gallon=3785 ml). 
-Не граммы/килограммы, а паунды (1 pound=453.6 gramm). Желательно иметь хотя бы примерное представление об этих незнакомых нам понятиям перед своим первым походом за продуктами.
+На милях вместо километров дело не остановилось. Здесь не миллилитры, а унции и галлоны (1 унция=29.57 мл., 1 галлон=3785 мл.). 
+Не граммы/килограммы, а паунды (1 паунд=453.6 гр.). Желательно иметь хотя бы примерное представление об этих незнакомых нам понятиям перед своим первым походом за продуктами.
+
+Итак, с мерами измерения разобрались, можно приступать к покупкам. 
+Предлагаю начать с фруктов и овощей. В нашем рационе они занимают первое и самое большое место. 
 
 
 
